# DesignKit

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  codeing.md  docker-compose.yml  entrypoint.sh  main.py  nginx.conf  pyproject.toml  requirements.txt  schemas.py  start.sh  test.psd  test_composite.psd
routers/: audio.py  board_layout.py  converter.py  image.py  lyric_video.py  o3ic_video.py  video_compress.py  video_convert.py  video_edit.py  video_gif.py  video_info.py  wecom.py
server/: main.py  requirements.txt
services/: board_layout.py  ffmpeg_service.py  image_compressor.py  oda_converter.py  task_manager.py  wecom_sender.py  wecom_video_parser.py
web/: package-lock.json  package.json
web/src/: components.d.ts
web/src/api/: converter.ts
web/src/views/: CadConverter.vue
