[project]
name = "designkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "anyio==4.8.0",
    "beautifulsoup4==4.12.3",
    "click==8.1.8",
    "cryptography>=46.0.5",
    "demucs==4.0.1",
    "fastapi==0.115.6",
    "h11==0.14.0",
    "httptools==0.6.4",
    "httpx==0.27.0",
    "idna==3.10",
    "lxml==5.3.0",
    "packbits==0.6",
    "pillow==11.1.0",
    "pycryptodome==3.21.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pytoshop==1.2.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "six==1.17.0",
    "starlette==0.41.3",
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision==0.24.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websockets==14.1",
    "wechatpy==1.8.18",
]
